--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,3 +13,27 @@ services:
     volumes:
       - ./volumes/.mytb-data:/data
       - ./volumes/.mytb-logs:/var/log/thingsboard
+ 
+  zitadel:
+    restart: 'always'
+    image: 'ghcr.io/zitadel/zitadel:latest'
+    command: 'start-from-init --masterkey "MasterkeyNeedsToHave32Characters" --tlsMode disabled'
+    env_file: '.env.docker'
+    environment:
+      ZITADEL_DATABASE_POSTGRES_HOST: db
+    depends_on:
+      db:
+        condition: 'service_healthy'
+    ports:
+      - '8081:8080'
+  
+  db:
+    restart: 'always'
+    image: postgres:16-alpine
+    env_file: '.env.docker'
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready", "-d", "zitadel", "-U", "postgres"]
+      interval: '10s'
+      timeout: '30s'
+      retries: 5
+      start_period: '20s'
