added docker volume for postgres and multiple database script

--- a/.env.docker
+++ b/.env.docker
@@ -1,3 +1,4 @@
+# Zitadel
 ZITADEL_DATABASE_POSTGRES_PORT=5432
 ZITADEL_DATABASE_POSTGRES_DATABASE=zitadel
 ZITADEL_DATABASE_POSTGRES_USER_USERNAME=zitadel
@@ -6,5 +7,8 @@ ZITADEL_DATABASE_POSTGRES_USER_SSL_MODE=disable
 ZITADEL_DATABASE_POSTGRES_ADMIN_USERNAME=postgres
 ZITADEL_DATABASE_POSTGRES_ADMIN_PASSWORD=postgres
 ZITADEL_DATABASE_POSTGRES_ADMIN_SSL_MODE=disable
+
+# DB
 PGUSER=postgres
 POSTGRES_PASSWORD=postgres
+POSTGRES_MULTIPLE_DATABASES=zitadel,breezelybackend
