added dockerfile and env setup to backend

--- a/.env.docker
+++ b/.env.docker
@@ -12,3 +12,15 @@ ZITADEL_DATABASE_POSTGRES_ADMIN_SSL_MODE=disable
 PGUSER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_MULTIPLE_DATABASES=zitadel,breezelybackend
+
+# Backend
+
+DEBUG=1
+SECRET_KEY=django-insecure-*38z4xaxba(ku&mh1nef1^2^^)%jiv5o=b@_ouzjuhiy3r*5@9
+DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
+DEBUG=1
+SQL_DATABASE=breezelybackend
+DATABASE=breezelybackend
+SQL_USER=postgres
+SQL_PASSWORD=postgres
+SQL_PORT=5432
