added auth to app

--- a/services/breezely-app/app.json
+++ b/services/breezely-app/app.json
@@ -5,13 +5,16 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "breezely",
     "userInterfaceStyle": "automatic",
-    "newArchEnabled": true,
+    "newArchEnabled": false,
+    "schema": "breezely",
     "ios": {
       "supportsTablet": true
     },
     "android": {
+      "versionCode": 1,
+      "schema": "breezely",
+      "package": "com.breezely.breezely",
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
@@ -32,7 +35,8 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
-      ]
+      ],
+      "expo-secure-store"
     ],
     "experiments": {
       "typedRoutes": true
