added push notifications android

--- a/services/breezely-app/android/app/build.gradle
+++ b/services/breezely-app/android/app/build.gradle
@@ -4,34 +4,6 @@ apply plugin: "com.facebook.react"
 
 def projectRoot = rootDir.getAbsoluteFile().getParentFile().getAbsolutePath()
 
-plugins {
-
-  id 'com.android.application'
-
-  // Add the Google services Gradle plugin
-
-  id 'com.google.gms.google-services'
-
-  ...
-
-}
-
-dependencies {
-
-  // Import the Firebase BoM
-
-  implementation platform('com.google.firebase:firebase-bom:33.6.0')
-
-
-  // TODO: Add the dependencies for Firebase products you want to use
-
-  // When using the BoM, don't specify versions in Firebase dependencies
-
-  // https://firebase.google.com/docs/android/setup#available-libraries
-
-}
-
-
 /**
  * This is the configuration block to customize your React Native Android app.
  * By default you don't need to apply any configuration, just uncomment the lines you need.
@@ -202,3 +174,5 @@ dependencies {
         implementation jscFlavor
     }
 }
+
+apply plugin: 'com.google.gms.google-services'
