--- a/services/breezely-app/android/build.gradle
+++ b/services/breezely-app/android/build.gradle
@@ -10,21 +10,13 @@ buildscript {
 
         ndkVersion = "26.1.10909125"
     }
-    plugins {
 
-  // ...
-
-
-  // Add the dependency for the Google services Gradle plugin
-
-  id 'com.google.gms.google-services' version '4.4.2' apply false
-
-}
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
+        classpath 'com.google.gms:google-services:4.4.1'
         classpath('com.android.tools.build:gradle')
         classpath('com.facebook.react:react-native-gradle-plugin')
         classpath('org.jetbrains.kotlin:kotlin-gradle-plugin')
