--- a/cicd-docker-compose.yaml
+++ b/cicd-docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   brezzely-backend:
-    iamge: brezzly/breezely-backend:latest
+    image: brezzly/breezely-backend:latest
     command: gunicorn breezelybackend.wsgi:application --bind 0.0.0.0:8000
     env_file:
       - path: ./.env.docker
