Thingsboard Client and HTTP API; Zitadel Auth

--- a/services/backend/breezelybackend/.env.template
+++ b/services/backend/breezelybackend/.env.template
@@ -1,10 +1,25 @@
-DEBUG=1
-SECRET_KEY=secret
-DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
-DEBUG=1
-SQL_DATABASE=breezelybackend
-DATABASE=breezelybackend
-SQL_USER=postgres
-SQL_PASSWORD=postgres
-SQL_HOST=localhost
-SQL_PORT=5432
+DEBUG=
+SECRET_KEY=
+DJANGO_ALLOWED_HOSTS=
+DEBUG=
+
+
+SQL_DATABASE=
+DATABASE=
+SQL_USER=
+SQL_PASSWORD=
+SQL_HOST=
+SQL_PORT=
+
+
+ZITADEL_CLIENT_ID=
+ZITADEL_DOMAIN=
+ZITADEL_ISSUER_URL=
+ZITADEL_INTROSPECTION_URL=
+ZITADEL_JWKS_ENDPOINT=
+ZITADEL_TOKEN_URL=
+API_PRIVATE_KEY_FILE_PATH=
+
+THINGSBOARD_URL=
+THINGSBOARD_USER_EMAIL=
+THINGSBOARD_USER_PASSWORD=
