--- a/services/breezely-app/package.json
+++ b/services/breezely-app/package.json
@@ -15,17 +15,21 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@dev-plugins/react-query": "^0.1.0",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
+    "@tanstack/react-query": "^5.62.7",
     "expo": "^52.0.11",
     "expo-auth-session": "~6.0.0",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
     "expo-crypto": "~14.0.1",
+    "expo-device": "~7.0.1",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.3",
+    "expo-notifications": "~0.29.10",
     "expo-router": "~4.0.9",
     "expo-secure-store": "~14.0.0",
     "expo-splash-screen": "~0.29.13",
@@ -43,9 +47,7 @@
     "react-native-screens": "~4.1.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.2",
-    "zustand": "^5.0.1",
-    "expo-notifications": "~0.29.10",
-    "expo-device": "~7.0.1"
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
