--- a/services/breezely-app/package.json
+++ b/services/breezely-app/package.json
@@ -17,8 +17,9 @@
   "dependencies": {
     "@dev-plugins/react-query": "^0.1.0",
     "@expo/vector-icons": "^14.0.2",
-    "@react-navigation/bottom-tabs": "^7.0.0",
-    "@react-navigation/native": "^7.0.0",
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
     "@tanstack/react-query": "^5.62.7",
     "expo": "^52.0.11",
     "expo-auth-session": "~6.0.0",
@@ -45,6 +46,7 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
+    "react-native-svg": "^15.10.1",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.2",
     "zustand": "^5.0.1"
