--- a/services/breezely-app/android/gradle.properties
+++ b/services/breezely-app/android/gradle.properties
@@ -54,3 +54,8 @@ EX_DEV_CLIENT_NETWORK_INSPECTOR=true
 
 # Use legacy packaging to compress native libraries in the resulting APK.
 expo.useLegacyPackaging=false
+
+
+# android.defaults.buildfeatures.buildconfig=true
+# android.abbis=x86,x86_64  
+# reactNativeArchitectures=x86,x86_64  
