--- a/services/breezely-app/app.json
+++ b/services/breezely-app/app.json
@@ -17,7 +17,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.breezely.breezely"
     },
     "web": {
       "bundler": "metro",
