backend: added room API

--- a/.env.docker
+++ b/.env.docker
@@ -20,6 +20,7 @@ SECRET_KEY=django-insecure-*38z4xaxba(ku&mh1nef1^2^^)%jiv5o=b@_ouzjuhiy3r*5@9
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
 SQL_DATABASE=breezelybackend
 DATABASE=breezelybackend
+SQL_HOST=server-1.local.malte-budig.org
 SQL_USER=postgres
 SQL_PASSWORD=postgres
 SQL_PORT=5432
