changed docker compose cicd template

--- a/cicd-docker-compose.yaml
+++ b/cicd-docker-compose.yaml
@@ -15,5 +15,15 @@ services:
       SQL_USER: ${SQL_USER}
       SQL_PASSWORD: ${SQL_PASSWORD} 
       SQL_PORT: ${SQL_PORT}
+      ZITADEL_CLIENT_ID: ${ZITADEL_CLIENT_ID} 
+      ZITADEL_DOMAIN: ${ZITADEL_DOMAIN}
+      ZITADEL_ISSUER_URL: ${ZITADEL_ISSUER_URL}
+      ZITADEL_INTROSPECTION_URL: ${ZITADEL_INTROSPECTION_URL}
+      ZITADEL_JWKS_ENDPOINT: ${ZITADEL_JWKS_ENDPOINT}
+      ZITADEL_TOKEN_URL: ${ZITADEL_TOKEN_URL}
+      API_PRIVATE_KEY_FILE_PATH: ${API_PRIVATE_KEY_FILE_PATH}
+      THINGSBOARD_URL: ${THINGSBOARD_URL}
+      THINGSBOARD_USER_EMAIL: ${THINGSBOARD_USER_EMAIL}
+      THINGSBOARD_USER_PASSWORD: ${THINGSBOARD_USER_PASSWORD}
     ports:
       - ${EXTERNAL_PORT}:8000
