--- a/services/breezely-app/android/app/src/main/AndroidManifest.xml
+++ b/services/breezely-app/android/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <category android:name="android.intent.category.DEFAULT"/>
         <category android:name="android.intent.category.BROWSABLE"/>
         <data android:scheme="com.breezely.breezely"/>
+        <data android:scheme="com.breezely.breezely"/>
       </intent-filter>
     </activity>
   </application>
