--- a/services/breezely-app/package.json
+++ b/services/breezely-app/package.json
@@ -24,6 +24,7 @@
     "expo": "~52.0.19",
     "expo-auth-session": "~6.0.1",
     "expo-blur": "~14.0.1",
+    "expo-build-properties": "~0.13.1",
     "expo-constants": "~17.0.3",
     "expo-crypto": "~14.0.1",
     "expo-device": "~7.0.1",
@@ -41,15 +42,17 @@
     "jwt-decode": "^4.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-native": "0.76.5",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-multiple-select": "^0.5.12",
+    "react-native-picker-select": "^9.3.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "zustand": "^5.0.1",
-    "expo-build-properties": "~0.13.1"
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
