--- a/services/breezely-app/package.json
+++ b/services/breezely-app/package.json
@@ -21,18 +21,19 @@
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/native-stack": "^7.0.0",
     "@tanstack/react-query": "^5.62.7",
-    "expo": "~52.0.19",
+    "expo": "~52.0.20",
     "expo-auth-session": "~6.0.1",
     "expo-blur": "~14.0.1",
     "expo-build-properties": "~0.13.1",
     "expo-constants": "~17.0.3",
     "expo-crypto": "~14.0.1",
+    "expo-dev-client": "~5.0.8",
     "expo-device": "~7.0.1",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.3",
     "expo-notifications": "~0.29.11",
-    "expo-router": "~4.0.13",
+    "expo-router": "~4.0.15",
     "expo-secure-store": "~14.0.0",
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
