--- a/services/breezely-app/package.json
+++ b/services/breezely-app/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@dev-plugins/react-query": "^0.1.0",
     "@expo/vector-icons": "^14.0.2",
+    "@hookform/resolvers": "^3.9.1",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/native-stack": "^7.0.0",
@@ -53,6 +54,8 @@
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
+    "undefined": "@hookform/resolvers/zod",
+    "zod": "^3.24.1",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
