--- a/services/breezely-app/package.json
+++ b/services/breezely-app/package.json
@@ -56,7 +56,8 @@
     "react-native-webview": "13.12.5",
     "undefined": "@hookform/resolvers/zod",
     "zod": "^3.24.1",
-    "zustand": "^5.0.1"
+    "zustand": "^5.0.1",
+    "expo-camera": "~16.0.10"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
