--- a/services/breezely-app/package.json
+++ b/services/breezely-app/package.json
@@ -26,6 +26,7 @@
     "expo-auth-session": "~6.0.1",
     "expo-blur": "~14.0.1",
     "expo-build-properties": "~0.13.1",
+    "expo-camera": "~16.0.10",
     "expo-constants": "~17.0.3",
     "expo-crypto": "~14.0.1",
     "expo-dev-client": "~5.0.8",
@@ -56,8 +57,7 @@
     "react-native-webview": "13.12.5",
     "undefined": "@hookform/resolvers/zod",
     "zod": "^3.24.1",
-    "zustand": "^5.0.1",
-    "expo-camera": "~16.0.10"
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
