--- a/services/breezely-app/package.json
+++ b/services/breezely-app/package.json
@@ -16,12 +16,14 @@
   },
   "dependencies": {
     "@dev-plugins/react-query": "^0.1.0",
+    "@eva-design/eva": "^2.2.0",
     "@expo/vector-icons": "^14.0.2",
     "@hookform/resolvers": "^3.9.1",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/native-stack": "^7.0.0",
     "@tanstack/react-query": "^5.62.7",
+    "@ui-kitten/components": "^5.3.1",
     "expo": "~52.0.20",
     "expo-auth-session": "~6.0.1",
     "expo-blur": "~14.0.1",
